# autoconfigure-test

./: Makefile.am  README.org  configure.ac
sample2/: Makefile.am  Polygon.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h  configure.ac  main.cpp
